[build-system]
requires      = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pyplugs"
authors = [{ name = "Geir Arne Hjelle", email = "geirarne@gmail.com" }]
description = "PyPlugs, decorator based plug-in architecture for Python"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["plugin", "decorator"]
requires-python = ">=3.9"
dependencies = []

[project.urls]
Home = "https://github.com/gahjelle/pyplugs"

[dependency-groups]
build = ["build", "twine"]
dev   = ["bumpver", "ruff", "interrogate", "mypy"]
test  = ["pytest", "pytest-cov"]

[tool.setuptools.dynamic]
version = { attr = "pyplugs.__version__" }


[tool.interrogate]
ignore-init-method = false
ignore-init-module = false
ignore-magic       = false
ignore-semiprivate = false
ignore-private     = false
ignore-module      = false
fail-under         = 100
verbose            = 0

[tool.ruff]
target-version = "py39"
exclude        = [".git", "venv", "migrations", "node_modules"]

[tool.ruff.lint]
select = ["E", "F", "I", "RUF100"]
ignore = []

[tool.mypy]
python_version = "3.9"
strict         = true

[tool.bumpver]
current_version = "v0.4.0"
version_pattern = "vMAJOR.MINOR.PATCH"
commit_message  = "bump version {old_version} -> {new_version}"
tag_message     = "{new_version}"
tag_scope       = "default"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml"      = ['current_version  = "{version}"']
"pyplugs/__init__.py" = ['__version__ = "MAJOR.MINOR.PATCH"']
